# 6SEM

./: .gitignore
CS/labs/: .claudiaideconfig
CS/labs/lab1/: README.md  client.c  ipx.h  server.c  test.c
CS/labs/lab2/lab2/: client.txt  ipx.h  lab2.sln  lab2.vcxproj  lab2.vcxproj.filters  main.c  main.tds  spx.h  winsock_adaptation.h  Ґ1о®§Ї
CS/labs/lab2/lab2/x64/Debug/: lab2.exe.recipe  lab2.ilk  lab2.vcxproj.FileListAbsolute.txt  vc143.idb
CS/labs/lab3/: CMakeLists.txt  CMakeSettings.json  Client.hpp  ConnectionManager.hpp  ISenadble.hpp  ISendable.cpp  Planning.txt  Server.hpp  Socket.cpp  Socket.hpp  TimeMeasurer.py  WSALoader.hpp  clientlog  clientlogger  clienttime  main.cpp  serverlog  serverlogger  servertime  t.cpp
CS/labs/lab3/archive/: app.h  ipx.h  main.c  spx.h  winsock_adaptation.h
MOB/labs/AnimeApp/app/: build.gradle
MOB/labs/AnimeApp/app/src/main/: AndroidManifest.xml
MOB/labs/AnimeApp/gradle/wrapper/: gradle-wrapper.properties
MOB/labs/MMOApp/: settings.gradle
MOB/labs/MMOApp/app/: build.gradle
MOB/labs/MMOApp/gradle/wrapper/: gradle-wrapper.properties
MOB/labs/Start/app/: build.gradle
MOB/labs/Start/gradle/wrapper/: gradle-wrapper.properties
MOB/labs/lab1/Empty/app/: build.gradle
RT/labs/FullProject/: ABPO00MDG_R_20200010000_01D_GN.rnx  esa20863.sp3  lab1.py  lab2.py  load.py  localisation.py  solver.py
RT/labs/lab1/: ABPO00MDG_R_20200010000_01D_GN.rnx  README.md  esa20863.sp3  load.py  localisation.py  main.py
RT/labs/lab2/: abpo0010.20o.Z  t.py
TMV/labs/lab1/: README.md
(+63 files in other folders)
